fix: currency string not visible for inputs

--- a/src/components/Input/Input.module.sass
+++ b/src/components/Input/Input.module.sass
@@ -63,6 +63,7 @@ $topPadding: .55em
     font-family: variables.$jetbrains-mono
     font-size: variables.$normal-font-size
     font-weight: 500
+    z-index: 20
     transform: translateY(-50%)
 
   .InlineLabel
